# rocon_demo_msgs

./: LICENSE  README.md
cafe_msgs/: CMakeLists.txt
cafe_msgs/msg/: RemoteOrder.msg  RemoteOrderList.msg  RemoteOrderStatus.msg  RemoteOrderUpdate.msg
rocon_demo_msgs/: CMakeLists.txt  package.xml
rocon_demo_msgs/msg/: Notice.msg
room_checker_msgs/: CMakeLists.txt  package.xml
room_checker_msgs/action/: CheckEmptyRoom.action
scenario_msgs/: .cproject  .project  CMakeLists.txt  package.xml
scenario_msgs/msg/: BatteryStatus.msg  RobotStatus.msg
simple_annotation_msgs/: CMakeLists.txt  package.xml
simple_annotation_msgs/srv/: SaveARMarkers.srv  SaveColumns.srv  SaveTables.srv  SaveWalls.srv
simple_delivery_msgs/: CMakeLists.txt  package.xml
simple_delivery_msgs/action/: DeliverOrder.action  P2PDeliveryOrder.action  RobotDeliveryOrder.action
simple_delivery_msgs/msg/: DeliveryOrder.msg  DeliveryStatus.msg  Order.msg  OrderList.msg  P2PDeliveryOrder.msg  P2PDeliveryOrder4UI.msg  P2PDeliveryStatus.msg  Receiver.msg  RobotStatus.msg
simple_delivery_msgs/srv/: GetRobotStatus.srv
simple_media_msgs/: CMakeLists.txt  package.xml
simple_media_msgs/msg/: ShowVideo.msg
vending_machine_msgs/: CMakeLists.txt  package.xml
vending_machine_msgs/action/: DrinkOrder.action  Interactor.action
waiterbot_msgs/: CMakeLists.txt  package.xml
waiterbot_msgs/msg/: DrinkOrder.msg  DrinkOrderFeedback.msg  NavCtrlGoTo.msg  NavCtrlStatus.msg
