<?xml version="1.0"?>
<package>
  <name>rocon_demo_msgs</name>
  <version>0.0.0</version>
  <description>The rocon_demo_msgs package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_demo_msgs</url> 
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cafe_msgs</run_depend>
  <run_depend>waiterbot_msgs</run_depend>
  <run_depend>simple_annotation_msgs</run_depend>
  <export>
    <metapackage/> 
  </export>
</package>
