<?xml version="1.0"?>
<package>
  <name>room_checker_msgs</name>
  <version>0.0.0</version>
  <description>The room_checker_msgs package</description>

  <maintainer email="dwlee@yujinrobot.com">DongWook Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/room_checker_msgs</url> 
  <author>DongWook Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

</package>
