<?xml version="1.0"?>
<package>
  <name>scenario_msgs</name>
  <version>0.0.0</version>
  <description>Messages for various scenarios</description>
  <author>Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/scenario_msgs</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_demo_msgs</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_demo_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>