<?xml version="1.0"?>
<package>
  <name>simple_annotation_msgs</name>
  <version>0.0.0</version>
  <description>The simple_annotation_msgs package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/simple_annotation_msgs</url> 

  <author>Jihoon Lee</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
